manifests/frontend-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: frontend-daemonset
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: elkingsparx/ip2-client:1.0.1
          ports:
            - containerPort: 80
