manifests/mongodb-passwordless-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-passwordless
  labels:
    app: mongodb-nopass
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb-nopass
  template:
    metadata:
      labels:
        app: mongodb-nopass
    spec:
      containers:
        - name: mongodb-nopass
          image: mongo
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongodb-persistent-storage
              mountPath: /data/db
      volumes:
        - name: mongodb-persistent-storage
          persistentVolumeClaim:
            claimName: mongodb-data-nopass
