manifests/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend-express
  type: LoadBalancer 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
