manifests/mongodb-nopass-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-nopass
spec:
  selector:
    app: mongodb-nopass
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
